--- a/src/pages/[...blog].astro
+++ b/src/pages/[...blog].astro
@@ -6,6 +6,7 @@ import '../sass/links.scss';
 import { MDLink } from '../components/links.tsx';
 import { components, ToDateString } from '../components/blog.tsx';
 import Comments from '../components/bluesky.tsx';
+import TableOfContents from '../components/toc/TableOfContents.tsx';
 
 export const prerender = true;
 export async function getStaticPaths() {
@@ -23,11 +24,23 @@ const imgLink = entry.data.image
 ---
 
 <Layout currPage={'blog'} title={entry.data.title} description={entry.data.description} image={imgLink}>
-  <h1 class="blog-title">{entry.data.title}</h1>
-  <p class="blog-date" data-lastmod={entry.data.date.toISOString()}>{ToDateString(entry.data.date, true)}</p>
-  <p class="blog-description">{entry.data.description}</p>
+  {
+    entry.data.hideTitle ? (
+      ''
+    ) : (
+      <>
+        <h1 class="blog-title">{entry.data.title}</h1>
+        <p class="blog-date" data-lastmod={entry.data.date.toISOString()}>
+          {ToDateString(entry.data.date, true)}
+        </p>
+        <p class="blog-description">{entry.data.description}</p>
+      </>
+    )
+  }
+
   <div class="blog-content">
     <Content components={{ ...components, a: MDLink }} />
   </div>
+  <TableOfContents client:idle />
   <Comments client:idle />
 </Layout>
