--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -97,6 +97,10 @@
     font-style: italic;
     font-weight: 300;
   }
+
+  strong em, em strong {
+    font-weight: 500;
+  }
 }
 
 .footnote-icon,
