--- a/src/components/research-syllabus/research-syllabus.scss
+++ b/src/components/research-syllabus/research-syllabus.scss
@@ -378,9 +378,12 @@ $reading-list-border: colors.$text;
   // Badges need a wrapper to align with content
   astro-island:has(.topic-badge) {
     display: block;
-    max-width: min(80vw, 800px);
     margin-left: auto;
     margin-right: auto;
+
+    @include mixins.screen('not-mobile') {
+      max-width: min(80vw, 800px);
+    }
   }
 
   // Badge container for multiple badges side by side
